tp_y.output
Terminals which are not used

   AS


State 62 conflicts: 2 shift/reduce


Grammar

    0 $accept: Prog $end

    1 Prog: classLOpt Bloc

    2 classTete: CLASS Classname

    3 classLOpt: Class classLOpt
    4          | /* empty */

    5 Class: Objet
    6      | classTete '(' LParamOpt ')' ExtendsOpt BlocOpt IS BlocObj

    7 Objet: OBJECT Classname IS BlocObj

    8 LParamOpt: LParam
    9          | /* empty */

   10 LParam: Param ',' LParam
   11       | Param

   12 Param: VAR Id ':' TypeC ValVar
   13      | Id ':' TypeC ValVar

   14 ValVar: AFF Expr
   15       | /* empty */

   16 LDeclChamp: DeclChamp LDeclChamp
   17           | DeclChamp

   18 DeclChamp: VAR Id ':' TypeC AffOpt ';'

   19 TypeC: INTC
   20      | STRINGC
   21      | VOIDC
   22      | Classname

   23 AffOpt: AFF Expr
   24       | /* empty */

   25 DeclMethode: OverrideOpt DEF Id '(' LParamOpt ')' ':' TypeC AFF Expr
   26            | OverrideOpt DEF Id '(' LParamOpt ')' TypeCOpt IS Bloc

   27 TypeCOpt: ':' TypeC
   28         | /* empty */

   29 OverrideOpt: OVERRIDE
   30            | /* empty */

   31 ExtendsOpt: EXTENDS Classname '(' LExprOpt ')'
   32           | /* empty */

   33 Expr: Cste
   34     | '(' Expr ')'
   35     | '(' TypeC Expr ')'
   36     | Selection
   37     | NEWC Classname '(' LExprOpt ')'
   38     | Envoi
   39     | ExprOperateur
   40     | TypeC

   41 LExprOpt: LExpr
   42         | /* empty */

   43 LExpr: Expr ',' LExpr
   44      | Expr

   45 ExprOperateur: Expr ADD Expr
   46              | Expr SUB Expr
   47              | Expr MUL Expr
   48              | Expr DIV Expr
   49              | SUB Expr
   50              | ADD Expr
   51              | Expr CONCAT Expr
   52              | Expr RelOp Expr

   53 Instr: Expr ';'
   54      | Bloc
   55      | RETURN ';'
   56      | Selection AFF Expr ';'
   57      | IF Expr THEN Instr ELSE Instr

   58 LInstrOpt: LInstr
   59          | /* empty */

   60 LInstr: Instr LInstr
   61       | Instr

   62 BlocOpt: Bloc
   63        | /* empty */

   64 Bloc: '{' Contenu '}'

   65 BlocObj: '{' LDeclChampMethodOpt '}'

   66 LDeclChampMethodOpt: LDeclChampMethod
   67                    | /* empty */

   68 LDeclChampMethod: LDeclChampMethod DeclChampMethod
   69                 | DeclChampMethod

   70 DeclChampMethod: DeclChamp
   71                | DeclMethode

   72 Contenu: LInstrOpt
   73        | LDeclChamp IS LInstr

   74 Envoi: Expr '.' MethodeC

   75 MethodeC: Id '(' LExprOpt ')'

   76 Selection: Expr '.' Id
   77          | Id
   78          | THIS
   79          | SUPER
   80          | RESULT


Terminals, with rules where they appear

$end (0) 0
'(' (40) 6 25 26 31 34 35 37 75
')' (41) 6 25 26 31 34 35 37 75
',' (44) 10 43
'.' (46) 74 76
':' (58) 12 13 18 25 27
';' (59) 18 53 55 56
'{' (123) 64 65
'}' (125) 64 65
error (256)
IS (258) 6 7 26 73
CLASS (259) 2
VAR (260) 12 18
EXTENDS (261) 31
DEF (262) 25 26
OVERRIDE (263) 29
RETURN (264) 55
AS (265)
IF (266) 57
THEN (267) 57
ELSE (268) 57
AFF (269) 14 23 25 56
NEWC (270) 37
VOIDC (271) 21
INTC (272) 19
STRINGC (273) 20
THIS (274) 78
SUPER (275) 79
RESULT (276) 80
ADD (277) 45 50
SUB (278) 46 49
MUL (279) 47
DIV (280) 48
CONCAT (281) 51
OBJECT (282) 7
Id (283) 12 13 18 25 26 75 76 77
Classname (284) 2 7 22 31 37
Cste (285) 33
RelOp (286) 52
UNARY (287)


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
Prog (42)
    on left: 1, on right: 0
classTete (43)
    on left: 2, on right: 6
classLOpt (44)
    on left: 3 4, on right: 1 3
Class (45)
    on left: 5 6, on right: 3
Objet (46)
    on left: 7, on right: 5
LParamOpt (47)
    on left: 8 9, on right: 6 25 26
LParam (48)
    on left: 10 11, on right: 8 10
Param (49)
    on left: 12 13, on right: 10 11
ValVar (50)
    on left: 14 15, on right: 12 13
LDeclChamp (51)
    on left: 16 17, on right: 16 73
DeclChamp (52)
    on left: 18, on right: 16 17 70
TypeC (53)
    on left: 19 20 21 22, on right: 12 13 18 25 27 35 40
AffOpt (54)
    on left: 23 24, on right: 18
DeclMethode (55)
    on left: 25 26, on right: 71
TypeCOpt (56)
    on left: 27 28, on right: 26
OverrideOpt (57)
    on left: 29 30, on right: 25 26
ExtendsOpt (58)
    on left: 31 32, on right: 6
Expr (59)
    on left: 33 34 35 36 37 38 39 40, on right: 14 23 25 34 35 43 44
    45 46 47 48 49 50 51 52 53 56 57 74 76
LExprOpt (60)
    on left: 41 42, on right: 31 37 75
LExpr (61)
    on left: 43 44, on right: 41 43
ExprOperateur (62)
    on left: 45 46 47 48 49 50 51 52, on right: 39
Instr (63)
    on left: 53 54 55 56 57, on right: 57 60 61
LInstrOpt (64)
    on left: 58 59, on right: 72
LInstr (65)
    on left: 60 61, on right: 58 60 73
BlocOpt (66)
    on left: 62 63, on right: 6
Bloc (67)
    on left: 64, on right: 1 26 54 62
BlocObj (68)
    on left: 65, on right: 6 7
LDeclChampMethodOpt (69)
    on left: 66 67, on right: 65
LDeclChampMethod (70)
    on left: 68 69, on right: 66 68
DeclChampMethod (71)
    on left: 70 71, on right: 68 69
Contenu (72)
    on left: 72 73, on right: 64
Envoi (73)
    on left: 74, on right: 38
MethodeC (74)
    on left: 75, on right: 74
Selection (75)
    on left: 76 77 78 79 80, on right: 36 56


state 0

    0 $accept: . Prog $end

    CLASS   shift, and go to state 1
    OBJECT  shift, and go to state 2

    $default  reduce using rule 4 (classLOpt)

    Prog       go to state 3
    classTete  go to state 4
    classLOpt  go to state 5
    Class      go to state 6
    Objet      go to state 7


state 1

    2 classTete: CLASS . Classname

    Classname  shift, and go to state 8


state 2

    7 Objet: OBJECT . Classname IS BlocObj

    Classname  shift, and go to state 9


state 3

    0 $accept: Prog . $end

    $end  shift, and go to state 10


state 4

    6 Class: classTete . '(' LParamOpt ')' ExtendsOpt BlocOpt IS BlocObj

    '('  shift, and go to state 11


state 5

    1 Prog: classLOpt . Bloc

    '{'  shift, and go to state 12

    Bloc  go to state 13


state 6

    3 classLOpt: Class . classLOpt

    CLASS   shift, and go to state 1
    OBJECT  shift, and go to state 2

    $default  reduce using rule 4 (classLOpt)

    classTete  go to state 4
    classLOpt  go to state 14
    Class      go to state 6
    Objet      go to state 7


state 7

    5 Class: Objet .

    $default  reduce using rule 5 (Class)


state 8

    2 classTete: CLASS Classname .

    $default  reduce using rule 2 (classTete)


state 9

    7 Objet: OBJECT Classname . IS BlocObj

    IS  shift, and go to state 15


state 10

    0 $accept: Prog $end .

    $default  accept


state 11

    6 Class: classTete '(' . LParamOpt ')' ExtendsOpt BlocOpt IS BlocObj

    VAR  shift, and go to state 16
    Id   shift, and go to state 17

    $default  reduce using rule 9 (LParamOpt)

    LParamOpt  go to state 18
    LParam     go to state 19
    Param      go to state 20


state 12

   64 Bloc: '{' . Contenu '}'

    VAR        shift, and go to state 21
    RETURN     shift, and go to state 22
    IF         shift, and go to state 23
    NEWC       shift, and go to state 24
    VOIDC      shift, and go to state 25
    INTC       shift, and go to state 26
    STRINGC    shift, and go to state 27
    THIS       shift, and go to state 28
    SUPER      shift, and go to state 29
    RESULT     shift, and go to state 30
    ADD        shift, and go to state 31
    SUB        shift, and go to state 32
    Id         shift, and go to state 33
    Classname  shift, and go to state 34
    Cste       shift, and go to state 35
    '('        shift, and go to state 36
    '{'        shift, and go to state 12

    $default  reduce using rule 59 (LInstrOpt)

    LDeclChamp     go to state 37
    DeclChamp      go to state 38
    TypeC          go to state 39
    Expr           go to state 40
    ExprOperateur  go to state 41
    Instr          go to state 42
    LInstrOpt      go to state 43
    LInstr         go to state 44
    Bloc           go to state 45
    Contenu        go to state 46
    Envoi          go to state 47
    Selection      go to state 48


state 13

    1 Prog: classLOpt Bloc .

    $default  reduce using rule 1 (Prog)


state 14

    3 classLOpt: Class classLOpt .

    $default  reduce using rule 3 (classLOpt)


state 15

    7 Objet: OBJECT Classname IS . BlocObj

    '{'  shift, and go to state 49

    BlocObj  go to state 50


state 16

   12 Param: VAR . Id ':' TypeC ValVar

    Id  shift, and go to state 51


state 17

   13 Param: Id . ':' TypeC ValVar

    ':'  shift, and go to state 52


state 18

    6 Class: classTete '(' LParamOpt . ')' ExtendsOpt BlocOpt IS BlocObj

    ')'  shift, and go to state 53


state 19

    8 LParamOpt: LParam .

    $default  reduce using rule 8 (LParamOpt)


state 20

   10 LParam: Param . ',' LParam
   11       | Param .

    ','  shift, and go to state 54

    $default  reduce using rule 11 (LParam)


state 21

   18 DeclChamp: VAR . Id ':' TypeC AffOpt ';'

    Id  shift, and go to state 55


state 22

   55 Instr: RETURN . ';'

    ';'  shift, and go to state 56


state 23

   57 Instr: IF . Expr THEN Instr ELSE Instr

    NEWC       shift, and go to state 24
    VOIDC      shift, and go to state 25
    INTC       shift, and go to state 26
    STRINGC    shift, and go to state 27
    THIS       shift, and go to state 28
    SUPER      shift, and go to state 29
    RESULT     shift, and go to state 30
    ADD        shift, and go to state 31
    SUB        shift, and go to state 32
    Id         shift, and go to state 33
    Classname  shift, and go to state 34
    Cste       shift, and go to state 35
    '('        shift, and go to state 36

    TypeC          go to state 39
    Expr           go to state 57
    ExprOperateur  go to state 41
    Envoi          go to state 47
    Selection      go to state 58


state 24

   37 Expr: NEWC . Classname '(' LExprOpt ')'

    Classname  shift, and go to state 59


state 25

   21 TypeC: VOIDC .

    $default  reduce using rule 21 (TypeC)


state 26

   19 TypeC: INTC .

    $default  reduce using rule 19 (TypeC)


state 27

   20 TypeC: STRINGC .

    $default  reduce using rule 20 (TypeC)


state 28

   78 Selection: THIS .

    $default  reduce using rule 78 (Selection)


state 29

   79 Selection: SUPER .

    $default  reduce using rule 79 (Selection)


state 30

   80 Selection: RESULT .

    $default  reduce using rule 80 (Selection)


state 31

   50 ExprOperateur: ADD . Expr

    NEWC       shift, and go to state 24
    VOIDC      shift, and go to state 25
    INTC       shift, and go to state 26
    STRINGC    shift, and go to state 27
    THIS       shift, and go to state 28
    SUPER      shift, and go to state 29
    RESULT     shift, and go to state 30
    ADD        shift, and go to state 31
    SUB        shift, and go to state 32
    Id         shift, and go to state 33
    Classname  shift, and go to state 34
    Cste       shift, and go to state 35
    '('        shift, and go to state 36

    TypeC          go to state 39
    Expr           go to state 60
    ExprOperateur  go to state 41
    Envoi          go to state 47
    Selection      go to state 58


state 32

   49 ExprOperateur: SUB . Expr

    NEWC       shift, and go to state 24
    VOIDC      shift, and go to state 25
    INTC       shift, and go to state 26
    STRINGC    shift, and go to state 27
    THIS       shift, and go to state 28
    SUPER      shift, and go to state 29
    RESULT     shift, and go to state 30
    ADD        shift, and go to state 31
    SUB        shift, and go to state 32
    Id         shift, and go to state 33
    Classname  shift, and go to state 34
    Cste       shift, and go to state 35
    '('        shift, and go to state 36

    TypeC          go to state 39
    Expr           go to state 61
    ExprOperateur  go to state 41
    Envoi          go to state 47
    Selection      go to state 58


state 33

   77 Selection: Id .

    $default  reduce using rule 77 (Selection)


state 34

   22 TypeC: Classname .

    $default  reduce using rule 22 (TypeC)


state 35

   33 Expr: Cste .

    $default  reduce using rule 33 (Expr)


state 36

   34 Expr: '(' . Expr ')'
   35     | '(' . TypeC Expr ')'

    NEWC       shift, and go to state 24
    VOIDC      shift, and go to state 25
    INTC       shift, and go to state 26
    STRINGC    shift, and go to state 27
    THIS       shift, and go to state 28
    SUPER      shift, and go to state 29
    RESULT     shift, and go to state 30
    ADD        shift, and go to state 31
    SUB        shift, and go to state 32
    Id         shift, and go to state 33
    Classname  shift, and go to state 34
    Cste       shift, and go to state 35
    '('        shift, and go to state 36

    TypeC          go to state 62
    Expr           go to state 63
    ExprOperateur  go to state 41
    Envoi          go to state 47
    Selection      go to state 58


state 37

   73 Contenu: LDeclChamp . IS LInstr

    IS  shift, and go to state 64


state 38

   16 LDeclChamp: DeclChamp . LDeclChamp
   17           | DeclChamp .

    VAR  shift, and go to state 21

    $default  reduce using rule 17 (LDeclChamp)

    LDeclChamp  go to state 65
    DeclChamp   go to state 38


state 39

   40 Expr: TypeC .

    $default  reduce using rule 40 (Expr)


state 40

   45 ExprOperateur: Expr . ADD Expr
   46              | Expr . SUB Expr
   47              | Expr . MUL Expr
   48              | Expr . DIV Expr
   51              | Expr . CONCAT Expr
   52              | Expr . RelOp Expr
   53 Instr: Expr . ';'
   74 Envoi: Expr . '.' MethodeC
   76 Selection: Expr . '.' Id

    ADD     shift, and go to state 66
    SUB     shift, and go to state 67
    MUL     shift, and go to state 68
    DIV     shift, and go to state 69
    CONCAT  shift, and go to state 70
    RelOp   shift, and go to state 71
    '.'     shift, and go to state 72
    ';'     shift, and go to state 73


state 41

   39 Expr: ExprOperateur .

    $default  reduce using rule 39 (Expr)


state 42

   60 LInstr: Instr . LInstr
   61       | Instr .

    RETURN     shift, and go to state 22
    IF         shift, and go to state 23
    NEWC       shift, and go to state 24
    VOIDC      shift, and go to state 25
    INTC       shift, and go to state 26
    STRINGC    shift, and go to state 27
    THIS       shift, and go to state 28
    SUPER      shift, and go to state 29
    RESULT     shift, and go to state 30
    ADD        shift, and go to state 31
    SUB        shift, and go to state 32
    Id         shift, and go to state 33
    Classname  shift, and go to state 34
    Cste       shift, and go to state 35
    '('        shift, and go to state 36
    '{'        shift, and go to state 12

    $default  reduce using rule 61 (LInstr)

    TypeC          go to state 39
    Expr           go to state 40
    ExprOperateur  go to state 41
    Instr          go to state 42
    LInstr         go to state 74
    Bloc           go to state 45
    Envoi          go to state 47
    Selection      go to state 48


state 43

   72 Contenu: LInstrOpt .

    $default  reduce using rule 72 (Contenu)


state 44

   58 LInstrOpt: LInstr .

    $default  reduce using rule 58 (LInstrOpt)


state 45

   54 Instr: Bloc .

    $default  reduce using rule 54 (Instr)


state 46

   64 Bloc: '{' Contenu . '}'

    '}'  shift, and go to state 75


state 47

   38 Expr: Envoi .

    $default  reduce using rule 38 (Expr)


state 48

   36 Expr: Selection .
   56 Instr: Selection . AFF Expr ';'

    AFF  shift, and go to state 76

    $default  reduce using rule 36 (Expr)


state 49

   65 BlocObj: '{' . LDeclChampMethodOpt '}'

    VAR       shift, and go to state 21
    OVERRIDE  shift, and go to state 77

    '}'       reduce using rule 67 (LDeclChampMethodOpt)
    $default  reduce using rule 30 (OverrideOpt)

    DeclChamp            go to state 78
    DeclMethode          go to state 79
    OverrideOpt          go to state 80
    LDeclChampMethodOpt  go to state 81
    LDeclChampMethod     go to state 82
    DeclChampMethod      go to state 83


state 50

    7 Objet: OBJECT Classname IS BlocObj .

    $default  reduce using rule 7 (Objet)


state 51

   12 Param: VAR Id . ':' TypeC ValVar

    ':'  shift, and go to state 84


state 52

   13 Param: Id ':' . TypeC ValVar

    VOIDC      shift, and go to state 25
    INTC       shift, and go to state 26
    STRINGC    shift, and go to state 27
    Classname  shift, and go to state 34

    TypeC  go to state 85


state 53

    6 Class: classTete '(' LParamOpt ')' . ExtendsOpt BlocOpt IS BlocObj

    EXTENDS  shift, and go to state 86

    $default  reduce using rule 32 (ExtendsOpt)

    ExtendsOpt  go to state 87


state 54

   10 LParam: Param ',' . LParam

    VAR  shift, and go to state 16
    Id   shift, and go to state 17

    LParam  go to state 88
    Param   go to state 20


state 55

   18 DeclChamp: VAR Id . ':' TypeC AffOpt ';'

    ':'  shift, and go to state 89


state 56

   55 Instr: RETURN ';' .

    $default  reduce using rule 55 (Instr)


state 57

   45 ExprOperateur: Expr . ADD Expr
   46              | Expr . SUB Expr
   47              | Expr . MUL Expr
   48              | Expr . DIV Expr
   51              | Expr . CONCAT Expr
   52              | Expr . RelOp Expr
   57 Instr: IF Expr . THEN Instr ELSE Instr
   74 Envoi: Expr . '.' MethodeC
   76 Selection: Expr . '.' Id

    THEN    shift, and go to state 90
    ADD     shift, and go to state 66
    SUB     shift, and go to state 67
    MUL     shift, and go to state 68
    DIV     shift, and go to state 69
    CONCAT  shift, and go to state 70
    RelOp   shift, and go to state 71
    '.'     shift, and go to state 72


state 58

   36 Expr: Selection .

    $default  reduce using rule 36 (Expr)


state 59

   37 Expr: NEWC Classname . '(' LExprOpt ')'

    '('  shift, and go to state 91


state 60

   45 ExprOperateur: Expr . ADD Expr
   46              | Expr . SUB Expr
   47              | Expr . MUL Expr
   48              | Expr . DIV Expr
   50              | ADD Expr .
   51              | Expr . CONCAT Expr
   52              | Expr . RelOp Expr
   74 Envoi: Expr . '.' MethodeC
   76 Selection: Expr . '.' Id

    '.'  shift, and go to state 72

    $default  reduce using rule 50 (ExprOperateur)


state 61

   45 ExprOperateur: Expr . ADD Expr
   46              | Expr . SUB Expr
   47              | Expr . MUL Expr
   48              | Expr . DIV Expr
   49              | SUB Expr .
   51              | Expr . CONCAT Expr
   52              | Expr . RelOp Expr
   74 Envoi: Expr . '.' MethodeC
   76 Selection: Expr . '.' Id

    '.'  shift, and go to state 72

    $default  reduce using rule 49 (ExprOperateur)


state 62

   35 Expr: '(' TypeC . Expr ')'
   40     | TypeC .

    NEWC       shift, and go to state 24
    VOIDC      shift, and go to state 25
    INTC       shift, and go to state 26
    STRINGC    shift, and go to state 27
    THIS       shift, and go to state 28
    SUPER      shift, and go to state 29
    RESULT     shift, and go to state 30
    ADD        shift, and go to state 31
    SUB        shift, and go to state 32
    Id         shift, and go to state 33
    Classname  shift, and go to state 34
    Cste       shift, and go to state 35
    '('        shift, and go to state 36

    ADD       [reduce using rule 40 (Expr)]
    SUB       [reduce using rule 40 (Expr)]
    $default  reduce using rule 40 (Expr)

    TypeC          go to state 39
    Expr           go to state 92
    ExprOperateur  go to state 41
    Envoi          go to state 47
    Selection      go to state 58


state 63

   34 Expr: '(' Expr . ')'
   45 ExprOperateur: Expr . ADD Expr
   46              | Expr . SUB Expr
   47              | Expr . MUL Expr
   48              | Expr . DIV Expr
   51              | Expr . CONCAT Expr
   52              | Expr . RelOp Expr
   74 Envoi: Expr . '.' MethodeC
   76 Selection: Expr . '.' Id

    ADD     shift, and go to state 66
    SUB     shift, and go to state 67
    MUL     shift, and go to state 68
    DIV     shift, and go to state 69
    CONCAT  shift, and go to state 70
    RelOp   shift, and go to state 71
    '.'     shift, and go to state 72
    ')'     shift, and go to state 93


state 64

   73 Contenu: LDeclChamp IS . LInstr

    RETURN     shift, and go to state 22
    IF         shift, and go to state 23
    NEWC       shift, and go to state 24
    VOIDC      shift, and go to state 25
    INTC       shift, and go to state 26
    STRINGC    shift, and go to state 27
    THIS       shift, and go to state 28
    SUPER      shift, and go to state 29
    RESULT     shift, and go to state 30
    ADD        shift, and go to state 31
    SUB        shift, and go to state 32
    Id         shift, and go to state 33
    Classname  shift, and go to state 34
    Cste       shift, and go to state 35
    '('        shift, and go to state 36
    '{'        shift, and go to state 12

    TypeC          go to state 39
    Expr           go to state 40
    ExprOperateur  go to state 41
    Instr          go to state 42
    LInstr         go to state 94
    Bloc           go to state 45
    Envoi          go to state 47
    Selection      go to state 48


state 65

   16 LDeclChamp: DeclChamp LDeclChamp .

    $default  reduce using rule 16 (LDeclChamp)


state 66

   45 ExprOperateur: Expr ADD . Expr

    NEWC       shift, and go to state 24
    VOIDC      shift, and go to state 25
    INTC       shift, and go to state 26
    STRINGC    shift, and go to state 27
    THIS       shift, and go to state 28
    SUPER      shift, and go to state 29
    RESULT     shift, and go to state 30
    ADD        shift, and go to state 31
    SUB        shift, and go to state 32
    Id         shift, and go to state 33
    Classname  shift, and go to state 34
    Cste       shift, and go to state 35
    '('        shift, and go to state 36

    TypeC          go to state 39
    Expr           go to state 95
    ExprOperateur  go to state 41
    Envoi          go to state 47
    Selection      go to state 58


state 67

   46 ExprOperateur: Expr SUB . Expr

    NEWC       shift, and go to state 24
    VOIDC      shift, and go to state 25
    INTC       shift, and go to state 26
    STRINGC    shift, and go to state 27
    THIS       shift, and go to state 28
    SUPER      shift, and go to state 29
    RESULT     shift, and go to state 30
    ADD        shift, and go to state 31
    SUB        shift, and go to state 32
    Id         shift, and go to state 33
    Classname  shift, and go to state 34
    Cste       shift, and go to state 35
    '('        shift, and go to state 36

    TypeC          go to state 39
    Expr           go to state 96
    ExprOperateur  go to state 41
    Envoi          go to state 47
    Selection      go to state 58


state 68

   47 ExprOperateur: Expr MUL . Expr

    NEWC       shift, and go to state 24
    VOIDC      shift, and go to state 25
    INTC       shift, and go to state 26
    STRINGC    shift, and go to state 27
    THIS       shift, and go to state 28
    SUPER      shift, and go to state 29
    RESULT     shift, and go to state 30
    ADD        shift, and go to state 31
    SUB        shift, and go to state 32
    Id         shift, and go to state 33
    Classname  shift, and go to state 34
    Cste       shift, and go to state 35
    '('        shift, and go to state 36

    TypeC          go to state 39
    Expr           go to state 97
    ExprOperateur  go to state 41
    Envoi          go to state 47
    Selection      go to state 58


state 69

   48 ExprOperateur: Expr DIV . Expr

    NEWC       shift, and go to state 24
    VOIDC      shift, and go to state 25
    INTC       shift, and go to state 26
    STRINGC    shift, and go to state 27
    THIS       shift, and go to state 28
    SUPER      shift, and go to state 29
    RESULT     shift, and go to state 30
    ADD        shift, and go to state 31
    SUB        shift, and go to state 32
    Id         shift, and go to state 33
    Classname  shift, and go to state 34
    Cste       shift, and go to state 35
    '('        shift, and go to state 36

    TypeC          go to state 39
    Expr           go to state 98
    ExprOperateur  go to state 41
    Envoi          go to state 47
    Selection      go to state 58


state 70

   51 ExprOperateur: Expr CONCAT . Expr

    NEWC       shift, and go to state 24
    VOIDC      shift, and go to state 25
    INTC       shift, and go to state 26
    STRINGC    shift, and go to state 27
    THIS       shift, and go to state 28
    SUPER      shift, and go to state 29
    RESULT     shift, and go to state 30
    ADD        shift, and go to state 31
    SUB        shift, and go to state 32
    Id         shift, and go to state 33
    Classname  shift, and go to state 34
    Cste       shift, and go to state 35
    '('        shift, and go to state 36

    TypeC          go to state 39
    Expr           go to state 99
    ExprOperateur  go to state 41
    Envoi          go to state 47
    Selection      go to state 58


state 71

   52 ExprOperateur: Expr RelOp . Expr
